@@ -20,6 +20,7 @@ cm4all-beng-proxy (0.7) unstable; urgency=low
   * uri-parser: don't unescape the URI path
   * http-client, ajp-client: verify the request URI
   * uri-escape: unescape each character only once
+  * http-cache: never use the memcached stock if caching is disabled
   * allow 8192 connections by default
   * allow 65536 file handles by default
   * added package cm4all-jailed-beng-proxy-delegate-helper
